server/requirements.txt
(venv) PS C:\Users\Asus\OneDrive\Desktop\ML_pipelineApp\server> python main.py
  File "C:\Users\Asus\OneDrive\Desktop\ML_pipelineApp\server\main.py", line 333
    roject Management Models
           ^^^^^^^^^^
SyntaxError: invalid syntax
(venv) PS C:\Users\Asus\OneDrive\Desktop\ML_pipelineApp\server> fastapi==0.104.1
uvicorn==0.24.0
python-multipart==0.0.6
pandas==2.1.3
scikit-learn==1.3.2
numpy==1.25.2
pydantic==2.5.0
python-jose==3.3.0
pymongo==4.6.0
bcrypt==4.1.2
passlib==1.7.4
python-dotenv==1.0.0
cloudinary==1.37.0